Improve performance for large files. Also correct Windows-specific code to allow compilation under VS2015.

--- a/.gitignore
+++ b/.gitignore
@@ -41,3 +41,11 @@
 *.coll?
 *.zdst?
 *.dist
+/Debug
+/Release
+/packJPG.vcxproj.filters
+/packJPG.vcxproj
+/packJPG.VC.VC.opendb
+/packJPG.VC.db
+/packJPG.sln
+/source/packJPG.vcxproj
